better wording for email

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -4,7 +4,7 @@
 </main>
 <footer>
 	<a href="{{ .Site.BaseURL }}">{{ .Site.BaseURL }}</a><br><br>
-  <p>Email me: jameswilcock8 at gmail.com</p>
+  <p>Contact me: jameswilcock8 at gmail.com</p>
   <!--<a href="/index.xml"><img src="/rss.svg" style="max-height:1.5em" alt="RSS Feed" title="Subscribe via RSS for updates."></a>-->
 </footer>
 </body>
