--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -3,7 +3,7 @@
 </article>
 </main>
 <footer>
-	<a href="{{ .Site.BaseURL }}">{{ .Site.BaseURL }}</a><br><br>
+	<a href="{{ .Site.BaseURL }}">{{ .Site.BaseURL }}</a><br>
   <p>Contact me: jameswilcock8 at gmail.com</p>
   <!--<a href="/index.xml"><img src="/rss.svg" style="max-height:1.5em" alt="RSS Feed" title="Subscribe via RSS for updates."></a>-->
 </footer>
